# go-fish

./: config.py  main.py  pyproject.toml
resources/: __init__.py  card.py  deck.py  spritesheet.py
